src/objects/Album__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <summarizedField>Track__c.Price__c</summarizedField>
        <summaryForeignKey>Track__c.Album__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Released_On__c</fullName>
        <label>Released On</label>
        <type>Date</type>
    </fields>
    <label>Album</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>av</fullName>
        <active>true</active>
        <errorConditionFormula>Description__c != &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>sbdddrdswt</errorMessage>
    </validationRules>
</CustomObject>